errors
video_Brightness.c:83:63: error: unknown type name ‘GstBaseTransform’; did you mean ‘GValueTransform’?
   83 | static GstFlowReturn gst_video_brightness_plugin_transform_ip(GstBaseTransform *trans, GstBuffer *buf) {
      |                                                               ^~~~~~~~~~~~~~~~
      |                                                               GValueTransform
In file included from /usr/include/gstreamer-1.0/gst/gstelementfactory.h:38,
                 from /usr/include/gstreamer-1.0/gst/gstelement.h:226,
                 from /usr/include/gstreamer-1.0/gst/gstbin.h:27,
                 from /usr/include/gstreamer-1.0/gst/gst.h:35,
                 from video_Brightness.c:1:
video_Brightness.c:117:5: warning: initialization of ‘gboolean (*)(GstPlugin *)’ {aka ‘int (*)(struct _GstPlugin *)’} from incompatible pointer type ‘void (*)(GstVideoBrightnessPlugin *)’ {aka ‘void (*)(struct _GstVideoBrightnessPlugin *)’} [-Wincompatible-pointer-types]
  117 |     gst_video_brightness_plugin_init,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/gstreamer-1.0/gst/gstplugin.h:265:3: note: in definition of macro ‘GST_PLUGIN_DEFINE’
  265 |   init, \
      |   ^~~~
video_Brightness.c:117:5: note: (near initialization for ‘gst_plugin_desc.plugin_init’)
  117 |     gst_video_brightness_plugin_init,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/gstreamer-1.0/gst/gstplugin.h:265:3: note: in definition of macro ‘GST_PLUGIN_DEFINE’
  265 |   init, \
      |   ^~~~
/usr/include/gstreamer-1.0/gst/gstplugin.h:268:3: error: ‘PACKAGE’ undeclared here (not in a function)
  268 |   PACKAGE, \
      |   ^~~~~~~
video_Brightness.c:107:1: note: in expansion of macro ‘GST_PLUGIN_DEFINE’
  107 | GST_PLUGIN_DEFINE(
      | ^~~~~~~~~~~~~~~~~
video_Brightness.c: In function ‘gst_plugin_video_brightness_register’:
video_Brightness.c:117:5: warning: passing argument 5 of ‘gst_plugin_register_static’ from incompatible pointer type [-Wincompatible-pointer-types]
  117 |     gst_video_brightness_plugin_init,
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     |
      |     void (*)(GstVideoBrightnessPlugin *) {aka void (*)(struct _GstVideoBrightnessPlugin *)}
/usr/include/gstreamer-1.0/gst/gstplugin.h:285:20: note: in definition of macro ‘GST_PLUGIN_DEFINE’
  285 |       description, init, version, license, \
      |                    ^~~~
/usr/include/gstreamer-1.0/gst/gstplugin.h:320:76: note: expected ‘GstPluginInitFunc’ {aka ‘int (*)(struct _GstPlugin *)’} but argument is of type ‘void (*)(GstVideoBrightnessPlugin *)’ {aka ‘void (*)(struct _GstVideoBrightnessPlugin *)’}
  320 |                                                          GstPluginInitFunc init_func,
      |    
